updated Master  notebook for LAM using helper file

--- a/Polb_Targeting_Tn5_Master.ipynb
+++ b/Polb_Targeting_Tn5_Master.ipynb
@@ -3116,14 +3116,15 @@
     "seq_primer_to_breaksite = 'TGGTTTTATTTCACCCCATGATAGTAATTATATCACTTCTGATCTGTTAAGAATAGACCTTTTAAAAGTATTGGATAACTTAGAGATGAGACATCTTCAGTTACTCTGTTATTCACCTATTACTCCTTAGGTTACTTGTGAATAATTTTGTGTGGGTCA'\n",
     "\n",
     "#print('this is for pipeline2 polb rev (row 1 in sheet)')\n",
-    "#primer_seq_plus_downstream ='ACAAAAGAGGCCAAGCTGGAGCAGGAAATAGATGC'\n",
+    "#seq_primer_to_breaksite = 'ACAAAAGAGGCCAAGCTGGAGCAGGAAATAGATGCACACGGAGGAAATGGTAGTGGAGTTCAGAGGAGGGAGAGGTTCTTTCTGCCTGGG'\n",
     "\n",
-    "\n",
+    "#this has some seq homology to the genome but should be ok for this pipeline trimming\n",
     "#print('this is for pipeline2 mCherryRev, row2 in sheet')\n",
-    "#primer_seq_plus_downstream ='GTTAGCAGACTTCCTCTGCCCTCAATCTTTAAGAA'\n",
-    "            \n",
+    "#seq_primer_to_breaksite = 'GTTAGCAGACTTCCTCTGCCCTCAATCTTTAAGAAAAAAAAAAGTCTAACAATGATTTAGGAATGCTTTGAGGACTTAAATGATCTTATTGGAAACATACCAGTCTGCTAAAAGACTAATTTTGTGTGGGTCA'\n",
+    "\n",
+    "#this is more reliable than the mCherry rev as it has no sequence homology to the genome\n",
     "#print('this is for pipeline2 mCherryFWD, row3 in sheet')\n",
-    "#primer_seq_plus_downstream ='GCAGGAGCTCGTCGACCCATGGGGGCCCGCCCC'\n",
+    "#seq_primer_to_breaksite = 'GCAGGAGCTCGTCGACCCATGGGGGCCCGCCCCAACTGGGGTAACCTTTGGGCTCCCCGGGCGCGACTAGTGAATTCAGATCTGATATCTCTAGAAGTCCTGGG'\n",
     "\n",
     "#check amplicon info and directory\n",
     "print(directory)\n",
@@ -3162,229 +3163,6 @@
     "\n",
     "#check the env variables\n",
     "#%env"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "############################\n",
-    "#\n",
-    "#  #input is the correctly primed part from pipeline1\n",
-    "# This is used to trim the fastq files. Originally it was just to trim off the adapter sequences.\n",
-    "# However in this case we use it to trim off the sequences up to the break\n",
-    "\n",
-    "# for Tn5 use the reverse compliment and read1. Read 1 starts distal to the site\n",
-    "# for LAM use read2\n",
-    "\n",
-    "# ##########################\n",
-    "def trim_fastq_to_break(dir_sample, amplicon_info, seq_primer_to_breaksite, lam_or_tn5='tn5'):\n",
-    "\n",
-    "    \n",
-    "    seqRC = reverse_complement(seq_primer_to_breaksite)\n",
-    "     \n",
-    "    \n",
-    "    # We first check if the experiment had any guides\n",
-    "    N7 = amplicon_info['index_I1']\n",
-    "    N5 = amplicon_info['index_I2']\n",
-    "\n",
-    "    # input files\n",
-    "    #for Tn5 we only use read 1 as it is the sequence distal to the gene specific primer\n",
-    "    file_R1 = create_filename(dir_sample, N7, N5, 'R1fastq_CorrPrime')\n",
-    "    file_R2 = create_filename(dir_sample, N7, N5, 'R2fastq_CorrPrime')\n",
-    "    \n",
-    "    if lam_or_tn5 == 'tn5':\n",
-    "        input_file = file_R1\n",
-    "    elif lam_or_tn5 == 'lam':\n",
-    "        input_file = file_R2\n",
-    "    else:\n",
-    "        print('input has to be \"tn5\" or \"lam\" ')\n",
-    "    \n",
-    "     # output files -trimmed to break\n",
-    "    file_cutadapt_R1 = create_filename(dir_sample, N7, N5, 'R1trimmed2break')\n",
-    "    file_cutadapt_R2 = create_filename(dir_sample, N7, N5, 'R2trimmed2break')\n",
-    "    file_cutadapt_report = create_filename(dir_sample, N7, N5, 'trimmed_report2break')\n",
-    "    \n",
-    "    if lam_or_tn5 == 'tn5':\n",
-    "        output_file = file_cutadapt_R1\n",
-    "    elif lam_or_tn5 == 'lam':\n",
-    "        output_file = file_cutadapt_R2\n",
-    "    else:\n",
-    "        print('input has to be \"tn5\" or \"lam\" ')\n",
-    "        \n",
-    "    if not os.path.exists(os.path.dirname(file_cutadapt_R1)):\n",
-    "        os.mkdir(os.path.dirname(file_cutadapt_R1))\n",
-    "\n",
-    "    # remove adapters with cutadapt\n",
-    "    #original uditas peramiter had an error -e 0.33 (but was cutting of random stuff too much)\n",
-    "    cutadapt_command = ['cutadapt',\n",
-    "                        '-m', '20',\n",
-    "                        '-e', '0.20',\n",
-    "                        '-a', seqRC,\n",
-    "                        '-o', output_file,\n",
-    "                        input_file]\n",
-    "\n",
-    "    handle_cutadapt_report = open(file_cutadapt_report, 'wb')\n",
-    "    subprocess.call(cutadapt_command, stdout=handle_cutadapt_report)\n",
-    "    handle_cutadapt_report.close()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "############################\n",
-    "#\n",
-    "# Align reads that did not map to the amplicons of interest\n",
-    "#\n",
-    "# Input: directory to be analyzed\n",
-    "#        amplicon_info, slice of sample_info.csv for the sample being processed\n",
-    "#        assembly, name of the assembly to be used by bowtie2. It is convenient to place it in a folder especified by\n",
-    "#        the environmental variable BOWTIE2_INDEXES\n",
-    "#   lam_or_tn5 needs to be 'lam' or 'tn5'\n",
-    "# ##########################\n",
-    "\n",
-    "def align_afterbreak_end_to_end_genome_global(dir_sample, amplicon_info, assembly, ncpu=4, lam_or_tn5='tn5'):\n",
-    "\n",
-    "    # We first check if the experiment had any guides\n",
-    "    N7 = amplicon_info['index_I1']\n",
-    "    N5 = amplicon_info['index_I2']\n",
-    "    \n",
-    "    #input\n",
-    "    # Read1 for Tn5 Read2 for LAM\n",
-    "    if lam_or_tn5 == 'tn5':\n",
-    "        file_Read = create_filename(dir_sample, N7, N5, 'R1trimmed2break')\n",
-    "    elif lam_or_tn5 == 'lam':\n",
-    "        file_Read = create_filename(dir_sample, N7, N5, 'R2trimmed2break')\n",
-    "\n",
-    "\n",
-    "    file_sam_genome_global = create_filename(dir_sample, N7, N5, 'break_trimmed_sam_genome_global')\n",
-    "    file_sam_report_genome_global = create_filename(dir_sample, N7, N5, 'break_trimmed_sam_report_genome_global')\n",
-    "\n",
-    "    if not os.path.exists(os.path.dirname(file_sam_genome_global)):\n",
-    "        os.mkdir(os.path.dirname(file_sam_genome_global))\n",
-    "\n",
-    "    file_bam_genome_global = create_filename(dir_sample, N7, N5, 'break_trimmed_bam_genome_global')\n",
-    "    file_sorted_bam_genome_global = create_filename(dir_sample, N7, N5, 'break_trimmed_sorted_bam_genome_global')\n",
-    "\n",
-    "    if not os.path.exists(os.path.dirname(file_bam_genome_global)):\n",
-    "        os.mkdir(os.path.dirname(file_bam_genome_global))\n",
-    "\n",
-    "    # global alignment to the genome with bowtie2\n",
-    "    initial_dir = os.getcwd()\n",
-    "\n",
-    "    bowtie2_command = ['bowtie2', '--very-sensitive', '-p', str(ncpu),\n",
-    "                       '-X', '5000', '-k', '2', '-x', assembly,\n",
-    "                       '-U', file_Read, '-S', file_sam_genome_global]\n",
-    "\n",
-    "    handle_sam_report_genome_global = open(file_sam_report_genome_global, 'wb')\n",
-    "\n",
-    "    subprocess.call(bowtie2_command, stderr=handle_sam_report_genome_global)\n",
-    "\n",
-    "    handle_sam_report_genome_global.close()\n",
-    "\n",
-    "    # convert sam to bam\n",
-    "    sam_to_bam_genome_global_command = ['samtools', 'view', '-Sb', file_sam_genome_global]\n",
-    "\n",
-    "    handle_file_bam_genome_global = open(file_bam_genome_global, 'wb')\n",
-    "\n",
-    "    subprocess.call(sam_to_bam_genome_global_command, stdout=handle_file_bam_genome_global)\n",
-    "\n",
-    "    # sort bam files\n",
-    "    sort_bam_genome_global_command = ['samtools', 'sort', file_bam_genome_global, '-o', file_sorted_bam_genome_global]\n",
-    "\n",
-    "    subprocess.call(sort_bam_genome_global_command)\n",
-    "\n",
-    "    # Clean up\n",
-    "    os.remove(file_sam_genome_global)\n",
-    "    os.remove(file_bam_genome_global)\n",
-    "\n",
-    "    # Create bam index files\n",
-    "    create_bam_genome_global_index_command = ['samtools', 'index', file_sorted_bam_genome_global]\n",
-    "    subprocess.call(create_bam_genome_global_index_command)\n",
-    "\n",
-    "    os.chdir(initial_dir)\n",
-    "\n",
-    "\n",
-    "############################\n",
-    "#       If you put in unmapped = 1 then it uses the unmapped to amplicons read, otherwise it just maps from trimmed fastq\n",
-    "# Aligns reads to the whole genome using bowtie2 and local alignment. This is needed to find translocations using\n",
-    "#   split reads and a program like socrates\n",
-    "#   --local aligment means that the sequence can be soft clipped at ends and is used in translocation programs that then align the clipped ends.\n",
-    "#\n",
-    "# Input: directory to be analyzed\n",
-    "#        amplicon_info, slice of sample_info.csv for the sample being processed\n",
-    "#        assembly, name of the assembly to be used by bowtie2. It is convenient to place it in a folder especified by\n",
-    "#        the environmental variable BOWTIE2_INDEXES\n",
-    "#\n",
-    "# ##########################\n",
-    "def align_afterbreaks_genome_local(dir_sample, unmapped_amplicons, amplicon_info, assembly, lam_or_tn5='tn5'):\n",
-    "\n",
-    "    # We first check if the experiment had any guides\n",
-    "    N7 = amplicon_info['index_I1']\n",
-    "    N5 = amplicon_info['index_I2']\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    #input\n",
-    "    # Read1 for Tn5 Read2 for LAM\n",
-    "    if lam_or_tn5 == 'tn5':\n",
-    "        file_Read = create_filename(dir_sample, N7, N5, 'R1trimmed2break')\n",
-    "    elif lam_or_tn5 == 'lam': \n",
-    "        file_Read = create_filename(dir_sample, N7, N5, 'R2trimmed2break')\n",
-    "    \n",
-    "    file_sam_genome_local = create_filename(dir_sample, N7, N5, 'break_trimmed_sam_genome_local')\n",
-    "    file_sam_report_genome_local = create_filename(dir_sample, N7, N5, 'break_trimmed_sam_report_genome_local')\n",
-    "\n",
-    "    if not os.path.exists(os.path.dirname(file_sam_genome_local)):\n",
-    "        os.mkdir(os.path.dirname(file_sam_genome_local))\n",
-    "\n",
-    "    file_bam_genome_local = create_filename(dir_sample, N7, N5, 'break_trimmed_bam_genome_local')\n",
-    "    file_sorted_bam_genome_local = create_filename(dir_sample, N7, N5, 'break_trimmed_sorted_bam_genome_local')\n",
-    "    # file_sorted_bai_genome_local = create_filename(dir_sample, N7, N5, 'sorted_bai_genome_local')\n",
-    "\n",
-    "    if not os.path.exists(os.path.dirname(file_bam_genome_local)):\n",
-    "        os.mkdir(os.path.dirname(file_bam_genome_local))\n",
-    "\n",
-    "    # local alignment to the genome with bowtie2\n",
-    "    initial_dir = os.getcwd()\n",
-    "\n",
-    "    bowtie2_command = ['bowtie2', '--local', '-p', str(ncpu),\n",
-    "                       '-X', '5000', '-k', '2', '-x', assembly,\n",
-    "                             '-U', file_Read, '-S', file_sam_genome_local]\n",
-    "\n",
-    "    handle_sam_report_genome_local = open(file_sam_report_genome_local, 'wb')\n",
-    "\n",
-    "    subprocess.call(bowtie2_command, stderr=handle_sam_report_genome_local)\n",
-    "\n",
-    "    handle_sam_report_genome_local.close()\n",
-    "\n",
-    "    # convert sam to bam\n",
-    "    sam_to_bam_genome_local_command = ['samtools', 'view', '-Sb', file_sam_genome_local]\n",
-    "\n",
-    "    handle_file_bam_genome_local = open(file_bam_genome_local, 'wb')\n",
-    "\n",
-    "    subprocess.call(sam_to_bam_genome_local_command, stdout=handle_file_bam_genome_local)\n",
-    "\n",
-    "    # sort bam files\n",
-    "    sort_bam_genome_local_command = ['samtools', 'sort', file_bam_genome_local, '-o', file_sorted_bam_genome_local]\n",
-    "\n",
-    "    subprocess.call(sort_bam_genome_local_command)\n",
-    "\n",
-    "    # Clean up\n",
-    "    os.remove(file_sam_genome_local)\n",
-    "    os.remove(file_bam_genome_local)\n",
-    "\n",
-    "    # Create bam index files\n",
-    "    create_bam_genome_local_index_command = ['samtools', 'index', file_sorted_bam_genome_local]\n",
-    "    subprocess.call(create_bam_genome_local_index_command)\n",
-    "\n",
-    "    os.chdir(initial_dir)"
    ]
   },
   {
@@ -3431,6 +3209,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
