pipeline2 with good bowtie2 build

--- a/Polb_Targeting_Tn5_Master.ipynb
+++ b/Polb_Targeting_Tn5_Master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_BCL2Fastq_only/10000Reads\n"
+      "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5/10000Reads\n"
      ]
     }
    ],
@@ -76,9 +76,9 @@
     "#Directory This is the same for all files from the same seq run\n",
     "\n",
     "#this is a minimal directory of only ~300 files for quick debugging\n",
-    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_BCL2Fastq_only/10000Reads'\n",
+    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5/10000Reads'\n",
     "\n",
-    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_BCL2Fastq_only'\n",
+    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5'\n",
     "\n",
     "print(directory)"
    ]
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,6 +189,7 @@
        "start_guide_3                                                                         NaN\n",
        "end_guide_3                                                                           NaN\n",
        "strand_guide_3                                                                        NaN\n",
+       "genome_plus_targeting                                              hg38_plus_targetvector\n",
        "Replace_Doner_Name                                                               pE038_MC\n",
        "Replace_Donor                           TGACCCACACAAAATTAGTCTTTTAGCAGACTGGTATGTTTCCAAT...\n",
        "Donor (single strand; double strand)                                                  NaN\n",
@@ -198,7 +199,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3035,7 +3036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3093,6 +3094,7 @@
        "start_guide_3                                                                         NaN\n",
        "end_guide_3                                                                           NaN\n",
        "strand_guide_3                                                                        NaN\n",
+       "genome_plus_targeting                                              hg38_plus_targetvector\n",
        "Replace_Doner_Name                                                               pE038_MC\n",
        "Replace_Donor                           TGACCCACACAAAATTAGTCTTTTAGCAGACTGGTATGTTTCCAAT...\n",
        "Donor (single strand; double strand)                                                  NaN\n",
@@ -3102,7 +3104,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3132,15 +3134,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Need to make an new bowtie2 index file that includes targeting for alignment agains the whole genome so it is all in one sheet together. \n",
+    "\n",
+    "### Other option would be to align it to the amplicon, extract unaligned files and then align to the genome but seems cleaner this way. \n",
+    "#### Ideally every sequence is unique between the targeting vector and genome.\n",
+    "\n",
+    "\n",
+    "1. Build your fastas of interest and label .fa files.\n",
+    "    1. You need fasta of hg38 or reference genome. You can pull this from downloaded bowtie indexed sampels and then use the following command to turn the index into a fasta file: bowtie2-inspect hg38 > hg38.fa   \n",
+    "    2. Put all the fasta files in the same folder\n",
+    "2. index the files with bowtie\n",
+    "    1. use the command bowtie2-build -f pe038_mc.fa,hg38.fa -p hg38_plus_targetvector\n",
+    "    2. this has the -p to make it take less ram in my case.\n",
+    "    3. In this case it adds the hg38 and the minicircle targeting file together\n",
+    "    4. I have a Intel® Core™ i7-5500U CPU @ 2.40GHz × 4 with 15.1 GiB ram and it required about 13.8 gigs of ram and 2 hours to do a hg38+small fasta index\n",
+    "    5. be sure to pay attention to the name of the new indexed file. \"hg38_plus_targetvector\" in example above. Add it to the sample_info.csv sheet. Under the tab 'genome_plus_targeting'.\n",
+    "    6. you can check it indexed correcctly: bowtie2-inspect -s hg38_plus_targetvector\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes/hg38.2bit\n",
+      "/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes/hg38_plus_targetvector.2bit\n",
       "env: BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes\n"
      ]
     }
@@ -3148,14 +3177,9 @@
    "source": [
     "# Assign the file_genome_2bit location. This is needed for pulling sequence from the referene genome by location\n",
     "#need a new build\n",
-    "assembly = amplicon_info['genome']\n",
-    "file_genome_2bit = os.path.join('/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes', assembly + '.2bit')\n",
-    "print(file_genome_2bit)\n",
-    "\n",
-    "# BOWTIE2_INDEXES are needed for global alignments\n",
-    "#not sure if this will work\n",
-    "#normally in bash: export BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes\n",
-    "#check in bash: > ECHO $GENOMES_2BIT\n",
+    "assembly_plus_targetvector = amplicon_info['genome_plus_targeting']\n",
+    "file_genome_2bit_plus_target = os.path.join('/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes', assembly_plus_targetvector + '.2bit')\n",
+    "print(file_genome_2bit_plus_target)\n",
     "\n",
     "#Needs to have a bowtie build in which the targeting vector is included!!\n",
     "\n",
@@ -3167,7 +3191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3178,22 +3202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#this aligns everything after the break to end-to-end \n",
-    "align_afterbreak_end_to_end_genome_global(directory, amplicon_info, assembly)"
+    "align_afterbreak_end_to_end_genome_global(directory, amplicon_info, assembly_plus_targetvector, keep_sam=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#this aligns everything in the local format wehre it can soft clip the ends\n",
-    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly)"
+    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly_plus_targetvector, keep_sam=0)"
    ]
   },
   {
