--- a/Polb_LAM_Master.ipynb
+++ b/Polb_LAM_Master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,8 @@
     "from Bio.SeqRecord import SeqRecord\n",
     "import pysam\n",
     "\n",
-    "from uditas.uditas_replace_helpers import *\n"
+    "from uditas.uditas_replace_helpers import *\n",
+    "\n"
    ]
   },
   {
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,16 +107,16 @@
     "#Directory\n",
     "\n",
     "#this is a minimal directory of only 300 files for quick debugging\n",
-    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed'\n",
+    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed_LAM'\n",
     "\n",
-    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed/10000Reads'\n",
+    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed_LAM/10000Reads'\n",
     "\n",
     "print(directory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -222,6 +223,7 @@
        "start_guide_3                                                                         NaN\n",
        "end_guide_3                                                                           NaN\n",
        "strand_guide_3                                                                        NaN\n",
+       "genome_plus_targeting                                              hg38_plus_targetvector\n",
        "Replace_Doner_Name                                                               pE038_MC\n",
        "Replace_Donor                           TGACCCACACAAAATTAGTCTTTTAGCAGACTGGTATGTTTCCAAT...\n",
        "Donor (single strand; double strand)                                                  NaN\n",
@@ -231,7 +233,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3163,7 +3165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3221,6 +3223,7 @@
        "start_guide_3                                                                         NaN\n",
        "end_guide_3                                                                           NaN\n",
        "strand_guide_3                                                                        NaN\n",
+       "genome_plus_targeting                                              hg38_plus_targetvector\n",
        "Replace_Doner_Name                                                               pE038_MC\n",
        "Replace_Donor                           TGACCCACACAAAATTAGTCTTTTAGCAGACTGGTATGTTTCCAAT...\n",
        "Donor (single strand; double strand)                                                  NaN\n",
@@ -3230,7 +3233,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3260,43 +3263,115 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#2bit genome add\n",
+    "\n",
+    "## Need to make an new bowtie2 index file that includes targeting for alignment agains the whole genome so it is all in one sheet together. \n",
+    "\n",
+    "### Other option would be to align it to the amplicon, extract unaligned files and then align to the genome but seems cleaner this way. \n",
+    "#### Ideally every sequence is unique between the targeting vector and genome.\n",
+    "\n",
+    "\n",
+    "1. Build your fastas of interest and label .fa files.\n",
+    "    1. You need fasta of hg38 or reference genome. You can pull this from downloaded bowtie indexed sampels and then use the following command to turn the index into a fasta file: bowtie2-inspect hg38 > hg38.fa   \n",
+    "    2. Put all the fasta files in the same folder\n",
+    "2. index the files with bowtie\n",
+    "    1. use the command bowtie2-build -f pe038_mc.fa,hg38.fa -p hg38_plus_targetvector\n",
+    "    2. this has the -p to make it take less ram in my case.\n",
+    "    3. In this case it adds the hg38 and the minicircle targeting file together\n",
+    "    4. I have a Intel® Core™ i7-5500U CPU @ 2.40GHz × 4 with 15.1 GiB ram and it required about 13.8 gigs of ram and 2 hours to do a hg38+small fasta index\n",
+    "    5. be sure to pay attention to the name of the new indexed file. \"hg38_plus_targetvector\" in example above. Add it to the sample_info.csv sheet. Under the tab 'genome_plus_targeting'.\n",
+    "    6. you can check it indexed correcctly: bowtie2-inspect -s hg38_plus_targetvector\n",
+    "    \n",
+    "\n",
+    "    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes/hg38_plus_targetvector.2bit\n",
+      "env: BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign the file_genome_2bit location. This is needed for pulling sequence from the referene genome by location\n",
+    "#need a new build\n",
+    "assembly_plus_targetvector = amplicon_info['genome_plus_targeting']\n",
+    "file_genome_2bit_plus_target = os.path.join('/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes', assembly_plus_targetvector + '.2bit')\n",
+    "print(file_genome_2bit_plus_target)\n",
+    "\n",
+    "#Needs to have a bowtie build in which the targeting vector is included!!\n",
+    "\n",
+    "%env BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes\n",
+    "\n",
+    "#check the env variables\n",
+    "#%env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lam analysis\n"
+     ]
+    }
+   ],
    "source": [
     "#Trim the break up to the cut site\n",
-    "trim_fastq_to_break(directory, amplicon_info, seq_primer_to_breaksite)"
+    "trim_fastq_to_break(directory, amplicon_info, seq_primer_to_breaksite, lam_or_tn5='lam')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lam analysis\n",
+      "sam file deleted\n"
+     ]
+    }
+   ],
    "source": [
     "#this aligns everything after the break to end-to-end \n",
-    "align_afterbreak_end_to_end_genome_global(directory, amplicon_info, assembly)"
+    "align_afterbreak_end_to_end_genome_global(directory, amplicon_info, assembly_plus_targetvector, lam_or_tn5='lam', keep_sam=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lam analysis\n",
+      "sam file deleted\n"
+     ]
+    }
+   ],
    "source": [
     "#this aligns everything in the local format wehre it can soft clip the ends\n",
-    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly)"
+    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly_plus_targetvector, lam_or_tn5 ='lam', keep_sam=0)"
    ]
   },
   {
