added automatic bed file generation for pipeline2

--- a/Polb_Targeting_Tn5_Master.ipynb
+++ b/Polb_Targeting_Tn5_Master.ipynb
@@ -25,6 +25,7 @@
     "from Bio.Seq import Seq\n",
     "from Bio.SeqRecord import SeqRecord\n",
     "import pysam\n",
+    "import shutil\n",
     "\n",
     "from uditas.uditas_replace_helpers import *"
    ]
@@ -3285,7 +3286,7 @@
    "source": [
     "#Trim the break up to the cut site\n",
     "\n",
-    "trim_fastq_to_break(directory, amplicon_info, seq_primer_to_breaksite)"
+    "trim_fastq_to_break(directory, amplicon_info, seq_primer_to_breaksite, length = 35)"
    ]
   },
   {
@@ -3304,7 +3305,30 @@
    ],
    "source": [
     "#this aligns everything after the break to end-to-end keep_sam=1 means keep the sam file\n",
-    "align_afterbreak_end_to_end_genome_global(directory, amplicon_info, assembly_plus_targetvector, keep_sam=0)"
+    "align_afterbreak_end_to_end_genome_global(directory, amplicon_info, assembly_plus_targetvector, keep_sam=0)\n",
+    "\n",
+    "### This should work for automatic bed generation, but it doesn't produce anythign and no ideaw way\n",
+    "\n",
+    "print('-----  now making bed file   ------')\n",
+    "\n",
+    "\n",
+    "N7 = amplicon_info['index_I1']\n",
+    "N5 = amplicon_info['index_I2']\n",
+    "file_trimmed_genome_global_bed = create_filename(directory, N7, N5, 'break_trimmed_genome_global_bed')\n",
+    "file_sorted_bam_genome_global = create_filename(directory, N7, N5, 'break_trimmed_sorted_bam_genome_global')\n",
+    "\n",
+    "!bam2bed < {file_sorted_bam_genome_global} > {file_trimmed_genome_global_bed}\n",
+    "\n",
+    "\n",
+    "bed_folder = os.path.abspath(create_filename(directory, N7, N5, 'all_bed'))\n",
+    "\n",
+    "\n",
+    "if not os.path.exists(bed_folder):\n",
+    "    os.mkdir(bed_folder)\n",
+    "\n",
+    "shutil.copy(file_trimmed_genome_global_bed, bed_folder)\n",
+    "\n",
+    "print('made global bed file:', N7, '_', N5 )"
    ]
   },
   {
@@ -3323,7 +3347,29 @@
    ],
    "source": [
     "#this aligns everything in the local format wehre it can soft clip the ends keep_sam=1 means keep the sam file\n",
-    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly_plus_targetvector, keep_sam=0)"
+    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly_plus_targetvector, keep_sam=0)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('-----  now making bed file   ------')\n",
+    "\n",
+    "N7 = amplicon_info['index_I1']\n",
+    "N5 = amplicon_info['index_I2']\n",
+    "file_trimmed_genome_local_bed = create_filename(directory, N7, N5, 'break_trimmed_genome_local_bed')\n",
+    "file_sorted_bam_genome_local = create_filename(directory, N7, N5, 'break_trimmed_sorted_bam_genome_local')\n",
+    "\n",
+    "\n",
+    "!bam2bed < {file_sorted_bam_genome_local} > {file_trimmed_genome_local_bed}\n",
+    "\n",
+    "\n",
+    "bed_folder = os.path.abspath(create_filename(directory, N7, N5, 'all_bed'))\n",
+    "\n",
+    "if not os.path.exists(bed_folder):\n",
+    "    os.mkdir(bed_folder)\n",
+    "\n",
+    "shutil.copy(file_trimmed_genome_local_bed, bed_folder)\n",
+    "\n",
+    "print('made local bed file:', N7, '_', N5 )"
    ]
   },
   {
