--- a/Polb_LAM_Master.ipynb
+++ b/Polb_LAM_Master.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +54,7 @@
     "from Bio.Seq import Seq\n",
     "from Bio.SeqRecord import SeqRecord\n",
     "import pysam\n",
+    "import shutil\n",
     "\n",
     "from uditas.uditas_replace_helpers import *\n",
     "\n"
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,44 +122,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is for pipeline1 LAM polb rev Targeting 50% N706 N505(row 1 in sheet) \n",
+      "this is for mCherryRev LAM  N708 N505 , row3 in sheet \n",
       "\n",
-      "primer_seq_plus_downstream GGCCAAGCTGGAGCAGGAAATAGATGCACACG\n"
+      "primer_seq_plus_downstream CCTCCACGTCACCGCATGTTAGCAGACTTCCT\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "NGS_req-ID                                                                     A000H2GWGF\n",
-       "name                                                                        LAM_Pol50_pbR\n",
+       "name                                                                   LAM_Pol50_mCherRev\n",
        "Sample                                                                               Polb\n",
-       "description                                               MiniSeq_K562_Polb_Rev_50per_LAM\n",
+       "description                                         MiniSeq_K562_Polb_mCherrRev_50per_LAM\n",
        "Control sample (Y/N)                                                                    N\n",
        "Notes                                                                                 NaN\n",
        "Dilution                                                                              NaN\n",
        "Cell name_type                                                                       K562\n",
        "UMI_Len                                                                        NNNNNNNNNN\n",
        "IndexI7Primer                                                                         NaN\n",
-       "I7_Index_ID                                                          P7_N706_SBS12nextera\n",
-       "index_I1                                                                             N706\n",
-       "barcode_I1                                                                       TAGGCATG\n",
+       "I7_Index_ID                                                          P7_N708_SBS12nextera\n",
+       "index_I1                                                                             N708\n",
+       "barcode_I1                                                                       CAGAGAGG\n",
        "I5_Index_ID                                                             P5_UMI_N505_Tn5-A\n",
        "index_I2                                                                             N505\n",
        "barcode_I2                                                                       CTCCTTAC\n",
        "primer_outfwd                                                                         NaN\n",
-       "primer                                                                U1-C-PolB_Rev_nest1\n",
+       "primer                                                             U1-C-mCherry_Rev_nest1\n",
        "genome                                                                               hg38\n",
        "chr                                                                                  chr8\n",
        "start                                                                            42350359\n",
        "end                                                                              42350378\n",
-       "strand                                                                                  -\n",
+       "strand                                                                                  +\n",
        "guide_1                                                                            Polb#3\n",
        "sequence_guide_1                                                     TAATTTTGTGTGGGTCACCC\n",
        "genome_guide_1                                                                       hg38\n",
@@ -187,10 +188,10 @@
        "plamid_name                                                            pE049_WO_redundant\n",
        "plasmid_sequence                        ttacataacttacggtaaatggcccgcctggctgaccgcccaacga...\n",
        "genomic_background                                                                    NaN\n",
-       "Name: 1, dtype: object"
+       "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +205,7 @@
     "#3 is LAM mCherryFWD   N708 N505 , row3 in sheet'\n",
     "\n",
     "\n",
-    "master_number = 1\n",
+    "master_number = 3\n",
     "\n",
     "\n",
     "#################################################################\n",
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3350,7 +3351,7 @@
     "\n",
     "1. Build your fastas of interest and label .fa files.\n",
     "    1. You need fasta of hg38 or reference genome. You can pull this from downloaded bowtie indexed sampels and then use the following command to turn the index into a fasta file: bowtie2-inspect hg38 > hg38.fa   \n",
-    "    2. Put all the fasta files in the same folder\n",
+    "    2. Put all the fasta files in the same folder. Should also use the transfected plasmid\n",
     "2. index the files with bowtie\n",
     "    1. use the command bowtie2-build -f pe038_mc.fa,hg38.fa -p hg38_plus_targetvector\n",
     "    2. this has the -p to make it take less ram in my case.\n",
@@ -3366,7 +3367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3408,39 +3409,63 @@
    ],
    "source": [
     "#Trim the break up to the cut site\n",
-    "trim_fastq_to_break(directory, amplicon_info, seq_primer_to_breaksite, lam_or_tn5='lam')"
+    "# the final number is the minimum length of sequennces to keep after trimming\n",
+    "trim_fastq_to_break(directory, amplicon_info, seq_primer_to_breaksite, lam_or_tn5='lam', length=35)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lam analysis\n",
-      "sam file deleted\n"
+      "-----  now making bed file   ------\n",
+      "made global bed file: N708 _ N505\n"
      ]
     }
    ],
    "source": [
     "#this aligns everything after the break to end-to-end \n",
-    "align_afterbreak_end_to_end_genome_global(directory, amplicon_info, assembly_plus_targetvector, lam_or_tn5='lam', keep_sam=0)"
+    "align_afterbreak_end_to_end_genome_global(directory, amplicon_info, assembly_plus_targetvector, lam_or_tn5='lam', keep_sam=0)\n",
+    "\n",
+    "### This should work for automatic bed generation, but it doesn't produce anythign and no ideaw way\n",
+    "\n",
+    "print('-----  now making bed file   ------')\n",
+    "\n",
+    "\n",
+    "N7 = amplicon_info['index_I1']\n",
+    "N5 = amplicon_info['index_I2']\n",
+    "file_trimmed_genome_global_bed = create_filename(directory, N7, N5, 'break_trimmed_genome_global_bed')\n",
+    "file_sorted_bam_genome_global = create_filename(directory, N7, N5, 'break_trimmed_sorted_bam_genome_global')\n",
+    "\n",
+    "!bam2bed < {file_sorted_bam_genome_global} > {file_trimmed_genome_global_bed}\n",
+    "\n",
+    "\n",
+    "bed_folder = os.path.abspath(create_filename(directory, N7, N5, 'all_bed'))\n",
+    "\n",
+    "\n",
+    "if not os.path.exists(bed_folder):\n",
+    "    os.mkdir(bed_folder)\n",
+    "\n",
+    "shutil.copy(file_trimmed_genome_global_bed, bed_folder)\n",
+    "\n",
+    "print('made global bed file:', N7, '_', N5 )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lam analysis\n",
-      "sam file deleted\n"
+      "-----  now making bed file   ------\n",
+      "made local bed file: N708 _ N505\n"
      ]
     }
    ],
@@ -3448,121 +3473,40 @@
     "#this aligns everything in the local format wehre it can soft clip the ends\n",
     "# this should be the most premiscous and show the most!\n",
     "\n",
-    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly_plus_targetvector, lam_or_tn5 ='lam', keep_sam=0)"
+    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly_plus_targetvector, lam_or_tn5 ='lam', keep_sam=0)\n",
+    "\n",
+    "print('-----  now making bed file   ------')\n",
+    "\n",
+    "N7 = amplicon_info['index_I1']\n",
+    "N5 = amplicon_info['index_I2']\n",
+    "file_trimmed_genome_local_bed = create_filename(directory, N7, N5, 'break_trimmed_genome_local_bed')\n",
+    "file_sorted_bam_genome_local = create_filename(directory, N7, N5, 'break_trimmed_sorted_bam_genome_local')\n",
+    "\n",
+    "\n",
+    "!bam2bed < {file_sorted_bam_genome_local} > {file_trimmed_genome_local_bed}\n",
+    "\n",
+    "\n",
+    "bed_folder = os.path.abspath(create_filename(directory, N7, N5, 'all_bed'))\n",
+    "\n",
+    "if not os.path.exists(bed_folder):\n",
+    "    os.mkdir(bed_folder)\n",
+    "\n",
+    "shutil.copy(file_trimmed_genome_local_bed, bed_folder)\n",
+    "\n",
+    "print('made local bed file:', N7, '_', N5 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "### this is not working but I want a bed file made automatically\n",
-    "\n",
-    "def align_afterbreaks_genome_local(dir_sample, unmapped_amplicons, amplicon_info, assembly, lam_or_tn5='tn5', ncpu=4, keep_sam=0):\n",
-    "\n",
-    "    # We first check if the experiment had any guides\n",
-    "    N7 = amplicon_info['index_I1']\n",
-    "    N5 = amplicon_info['index_I2']\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    #input\n",
-    "    # Read1 for Tn5 Read2 for LAM\n",
-    "    if lam_or_tn5 == 'tn5':\n",
-    "        file_Read = create_filename(dir_sample, N7, N5, 'R1trimmed2break')\n",
-    "        print('tn5 analysis')\n",
-    "    elif lam_or_tn5 == 'lam': \n",
-    "        file_Read = create_filename(dir_sample, N7, N5, 'R2trimmed2break')\n",
-    "        print('lam analysis')\n",
-    "    \n",
-    "    file_sam_genome_local = create_filename(dir_sample, N7, N5, 'break_trimmed_sam_genome_local')\n",
-    "    file_sam_report_genome_local = create_filename(dir_sample, N7, N5, 'break_trimmed_sam_report_genome_local')\n",
-    "\n",
-    "    if not os.path.exists(os.path.dirname(file_sam_genome_local)):\n",
-    "        os.mkdir(os.path.dirname(file_sam_genome_local))\n",
-    "\n",
-    "    file_bam_genome_local = create_filename(dir_sample, N7, N5, 'break_trimmed_bam_genome_local')\n",
-    "    file_sorted_bam_genome_local = create_filename(dir_sample, N7, N5, 'break_trimmed_sorted_bam_genome_local')\n",
-    "    # file_sorted_bai_genome_local = create_filename(dir_sample, N7, N5, 'sorted_bai_genome_local')\n",
-    "\n",
-    "    if not os.path.exists(os.path.dirname(file_bam_genome_local)):\n",
-    "        os.mkdir(os.path.dirname(file_bam_genome_local))\n",
-    "  \n",
-    "    # local alignment to the genome with bowtie2\n",
-    "    initial_dir = os.getcwd()\n",
-    "    '''\n",
-    "    bowtie2_command = ['bowtie2', '--local', '-p', str(ncpu),\n",
-    "                       '-X', '5000', '-k', '2', '-x', assembly,\n",
-    "                             '-U', file_Read, '-S', file_sam_genome_local]\n",
-    "\n",
-    "    handle_sam_report_genome_local = open(file_sam_report_genome_local, 'wb')\n",
-    "\n",
-    "    subprocess.call(bowtie2_command, stderr=handle_sam_report_genome_local)\n",
-    "\n",
-    "    handle_sam_report_genome_local.close()\n",
-    "\n",
-    "    # convert sam to bam\n",
-    "    sam_to_bam_genome_local_command = ['samtools', 'view', '-Sb', file_sam_genome_local]\n",
-    "\n",
-    "    handle_file_bam_genome_local = open(file_bam_genome_local, 'wb')\n",
-    "\n",
-    "    subprocess.call(sam_to_bam_genome_local_command, stdout=handle_file_bam_genome_local)\n",
-    "\n",
-    "    # sort bam files\n",
-    "    sort_bam_genome_local_command = ['samtools', 'sort', file_bam_genome_local, '-o', file_sorted_bam_genome_local]\n",
-    "\n",
-    "    subprocess.call(sort_bam_genome_local_command)\n",
-    "    '''    \n",
-    "    # bam to bed\n",
-    "    file_trimmed_genome_local_bed = create_filename(dir_sample, N7, N5, 'break_trimmed_genome_local_bed')\n",
-    "    \n",
-    "    bamtobed_command = ['convert2bed', '--input=bam', '<', file_sorted_bam_genome_local, '>', file_trimmed_genome_local_bed]\n",
-    "    print('working')\n",
-    "\n",
-    "#    subprocess.call(bamtobed_command)\n",
-    "    subprocess.check_output(bamtobed_command)\n",
-    "    subprocess.check_output([\"echo\", \"Hello World!\"])\n",
-    "    print(N7+N5)\n",
-    "\n",
-    "    print('file_sorted_bam_genome_local', file_sorted_bam_genome_local)\n",
-    "    '''\n",
-    "    \n",
-    "    # Clean up\n",
-    "    if keep_sam == 0:\n",
-    "        os.remove(file_sam_genome_local)\n",
-    "        print('sam file deleted')\n",
-    "    os.remove(file_bam_genome_local)\n",
-    "\n",
-    "    # Create bam index files\n",
-    "    create_bam_genome_local_index_command = ['samtools', 'index', file_sorted_bam_genome_local]\n",
-    "    subprocess.call(create_bam_genome_local_index_command)\n",
-    "    '''\n",
-    "    os.chdir(initial_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lam analysis\n",
-      "working\n",
-      "N706N505\n",
-      "file_sorted_bam_genome_local /media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed_LAM/N706_N505/break_trimmed_bam_genome_local_files/N706_N505.sorted.bam\n"
-     ]
-    }
-   ],
-   "source": [
     "# bam file to bed. Bed files are better for using in a table\n",
-    "# convert2bed --input=bam < N701_N501.sorted.bam > N701_N501.sorted.bed\n",
+    "# convert2bed --input=bam < N706_N505.sorted.bam > N706_N505_global.sorted.bed\n",
     "\n",
-    "align_afterbreaks_genome_local(directory, 1, amplicon_info, assembly_plus_targetvector, lam_or_tn5 ='lam', keep_sam=0)\n"
+    "#bam2bed < N706_N505.sorted.bam > N706_N505_global.sorted.bed\n",
+    "\n"
    ]
   },
   {
