made analysis for pipeline2 quantifying the outcomes

--- a/Polb_LAM_Master.ipynb
+++ b/Polb_LAM_Master.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3238,15 +3238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes/hg38_plus_targetvector.2bit\n",
-      "env: BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes\n"
+     "ename": "NameError",
+     "evalue": "name 'amplicon_info' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-b48417b7d299>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Assign the file_genome_2bit location. This is needed for pulling sequence from the referene genome by location\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#need a new build\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0massembly_plus_targetvector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mamplicon_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'genome_plus_targeting'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mfile_genome_2bit_plus_target\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0massembly_plus_targetvector\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.2bit'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_genome_2bit_plus_target\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'amplicon_info' is not defined"
      ]
     }
    ],
@@ -3416,7 +3419,15 @@
     "\n",
     "    shutil.copy(file_trimmed_genome_local_bed, bed_folder)\n",
     "\n",
-    "    print('made local bed file:', N7, '_', N5 )\n"
+    "    print('made local bed file:', N7, '_', N5 )\n",
+    "    \n",
+    "    print('doing the quantification of global alignments')\n",
+    "    \n",
+    "    quantify_pipeline2_alignments(directory, 'global', amplicon_info, 'lam')\n",
+    "\n",
+    "    print('doing the quantification of local alignments')\n",
+    "\n",
+    "    quantify_pipeline2_alignments(directory, 'local', amplicon_info, 'lam')\n"
    ]
   },
   {
@@ -3442,17 +3453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "this is for mCherryrev LAM  N708 N505 , row3 in sheet \n",
       "\n",
-      "this is for pipeline1 LAM polb rev Targeting 50% N706 N505(row 1 in sheet) \n",
-      "\n",
-      "seq_to_breaksite GGCCAAGCTGGAGCAGGAAATAGATGCACACGGAGGAAATGGTAGTGGAGTTCAGAGGAGGGAGAGGTTCTTTCTGCCTGGG \n",
+      "seq_to_breaksite CCTCCACGTCACCGCATGTTAGCAGACTTCCTCTGCCCTCAATCTTTAAGAAAAAAAAAAGTCTAACAATGATTTAGGAATGCTTTGAGGACTTAAATGATCTTATTGGAAACATACCAGTCTGCTAAAAGACTAATTTTGTGTGGGTCA \n",
       "\n",
       "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed_LAM\n",
       "LAM_Pol50_mCherRev\n"
@@ -3462,8 +3472,7 @@
    "source": [
     "#This is for the sequence to the breaksite for the pipeline of genomic alignment \n",
     "# make sure the sequences are capital\n",
-    "master_number = 1\n",
-    "print()\n",
+    "master_number = 3\n",
     "seq_to_breaksite = [['GGCCAAGCTGGAGCAGGAAATAGATGCACACGGAGGAAATGGTAGTGGAGTTCAGAGGAGGGAGAGGTTCTTTCTGCCTGGG', 'this is for pipeline1 LAM- polb rev WT N706 N504 (row 0 in sheet)'],\n",
     "                    ['GGCCAAGCTGGAGCAGGAAATAGATGCACACGGAGGAAATGGTAGTGGAGTTCAGAGGAGGGAGAGGTTCTTTCTGCCTGGG','this is for pipeline1 LAM polb rev Targeting 50% N706 N505(row 1 in sheet)'],\n",
     "                    ['TGCATCGCATTGTCTGAGTAGGTGTCATTCTATTCTGGGGGGTGGGGTGGGGCAGGACAGCAAGGGGGAGGATTGGGAAGAGAATAGCAGGCATGCTGGGGGGATCCCTGCAGGAGCTCGTCGACCCATGGGGGCCCGCCCCAACTGGGGTAACCTTTGGGCTCCCCGGGCGCGACTAGTGAATTCAGATCTGATATCTCTAGAAGTCCTGGG','this is for pipeline1 LAM mCherryFwd N707 N505, row2 in sheet'],\n",
@@ -3476,6 +3485,8 @@
     "\n",
     "\n",
     "#check amplicon info and directory\n",
+    "amplicon_info = get_csv_data(directory, master_number)\n",
+    "\n",
     "print(directory)\n",
     "print(amplicon_info['name'])\n",
     "\n",
@@ -3597,6 +3608,41 @@
     "\n",
     "#bam2bed < N706_N505.sorted.bam > N706_N505_global.sorted.bed\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   alignments_target_site_all  alignments_target_vector_all  \\\n",
+      "0                      124151                        253853   \n",
+      "\n",
+      "   alignments_translocations_all  total aligned reads  %_target_site_reads  \\\n",
+      "0                         102217             480221.0            25.852889   \n",
+      "\n",
+      "   %_target_vector_reads  %_translocations  \n",
+      "0              52.861703         21.285408  \n",
+      "   alignments_target_site_all  alignments_target_vector_all  \\\n",
+      "0                      125237                        253041   \n",
+      "\n",
+      "   alignments_translocations_all  total aligned reads  %_target_site_reads  \\\n",
+      "0                         104551             482829.0            25.938169   \n",
+      "\n",
+      "   %_target_vector_reads  %_translocations  \n",
+      "0              52.407995         21.653836  \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(quantify_pipeline2_alignments(directory, 'global', amplicon_info, 'lam'))\n",
+    "\n",
+    "print(quantify_pipeline2_alignments(directory, 'local', amplicon_info, 'lam'))"
    ]
   },
   {
