--- a/Polb_Targeting_Tn5_Master.ipynb
+++ b/Polb_Targeting_Tn5_Master.ipynb
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5\n"
+     ]
+    }
+   ],
    "source": [
     "#things taken from original uditas args\n",
     "\n",
@@ -3117,7 +3125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3153,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3164,12 +3172,23 @@
       "running row 0\n",
       "this is for pipeline2 polb fwd (row 0 in sheet) \n",
       "\n",
-      "running row 1\n",
-      "this is for pipeline2 polb rev (row 1 in sheet) \n",
-      "\n",
-      "running row 3\n",
-      "this is for pipeline2 mCherryFWD, row3 in sheet \n",
-      "\n"
+      "minimum length after trimming is: 35\n",
+      "tn5 analysis\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-6614dbfc36f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;31m#run trimming\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m     \u001b[0mtrim_fastq_to_break\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mamplicon_info\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseq_primer_to_breaksite\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m35\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/edanner/workspace/uditas/uditas/uditas_replace_helpers.py\u001b[0m in \u001b[0;36mtrim_fastq_to_break\u001b[0;34m(dir_sample, amplicon_info, seq_primer_to_breaksite, lam_or_tn5, length)\u001b[0m\n\u001b[1;32m   2274\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2275\u001b[0m     \u001b[0mhandle_cutadapt_report\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_cutadapt_report\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2276\u001b[0;31m     \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcutadapt_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhandle_cutadapt_report\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2277\u001b[0m     \u001b[0mhandle_cutadapt_report\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/edanner/anaconda3/envs/uditas_polb/lib/python2.7/subprocess.pyc\u001b[0m in \u001b[0;36mcall\u001b[0;34m(*popenargs, **kwargs)\u001b[0m\n\u001b[1;32m    170\u001b[0m     \u001b[0mretcode\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"ls\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"-l\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m     \"\"\"\n\u001b[0;32m--> 172\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mPopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpopenargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/edanner/anaconda3/envs/uditas_polb/lib/python2.7/subprocess.pyc\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1097\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreturncode\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1098\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1099\u001b[0;31m                     \u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_eintr_retry_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwaitpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1100\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mOSError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1101\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrno\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0merrno\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mECHILD\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/edanner/anaconda3/envs/uditas_polb/lib/python2.7/subprocess.pyc\u001b[0m in \u001b[0;36m_eintr_retry_call\u001b[0;34m(func, *args)\u001b[0m\n\u001b[1;32m    123\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mOSError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIOError\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrno\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0merrno\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEINTR\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -3267,7 +3286,14 @@
     "\n",
     "    shutil.copy(file_trimmed_genome_local_bed, bed_folder)\n",
     "\n",
-    "    print('made local bed file:', N7, '_', N5 )\n"
+    "    print('made local bed file:', N7, '_', N5 )\n",
+    "    \n",
+    "    print('doing analysis on the global alignment', N7, '_', N5 )\n",
+    "    \n",
+    "    quantify_pipeline2_alignments(directory, 'global', amplicon_info)\n",
+    "    \n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -3279,7 +3305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3288,9 +3314,9 @@
      "text": [
       "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5\n",
       "\n",
-      "this is for pipeline2 mCherryFWD, row3 in sheet \n",
+      "this is for pipeline2 polb fwd (row 0 in sheet) \n",
       "\n",
-      "seq_to_breaksite GCAGGAGCTCGTCGACCCATGGGGGCCCGCCCCAACTGGGGTAACCTTTGGGCTCCCCGGGCGCGACTAGTGAATTCAGATCTGATATCTCTAGAAGTCCTGGG \n",
+      "seq_to_breaksite TGGTTTTATTTCACCCCATGATAGTAATTATATCACTTCTGATCTGTTAAGAATAGACCTTTTAAAAGTATTGGATAACTTAGAGATGAGACATCTTCAGTTACTCTGTTATTCACCTATTACTCCTTAGGTTACTTGTGAATAATTTTGTGTGGGTCA \n",
       "\n",
       "directory /media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5\n"
      ]
@@ -3299,27 +3325,27 @@
      "data": {
       "text/plain": [
        "NGS_req-ID                                                                     A000H2GWGF\n",
-       "name                                                                        Tn5_Pol50_bpa\n",
+       "name                                                                        Tn5_Pol50_pbF\n",
        "Sample                                                                               Polb\n",
-       "description                             MiniSeq_K562_PolbHIROS_50per_unsorted_mCherry_Fwd\n",
+       "description                                   MiniSeq_K562_PolbHIROS_50per_unsorted_polbF\n",
        "Control sample (Y/N)                                                                    N\n",
        "Notes                                                                                 NaN\n",
        "Dilution                                                                              NaN\n",
        "Cell name_type                                                                       K562\n",
        "UMI_Len                                                                        NNNNNNNNNN\n",
-       "IndexI7Primer                                                                      prE371\n",
-       "I7_Index_ID                                                          P7_N704_SBS12nextera\n",
-       "index_I1                                                                             N704\n",
-       "barcode_I1                                                                       TCCTGAGC\n",
+       "IndexI7Primer                                                                      prE368\n",
+       "I7_Index_ID                                                          P7_N701_SBS12nextera\n",
+       "index_I1                                                                             N701\n",
+       "barcode_I1                                                                       TAAGGCGA\n",
        "I5_Index_ID                                                              P5_UMI_N50_Tn5-A\n",
        "index_I2                                                                             N501\n",
        "barcode_I2                                                                       GCGATCTA\n",
-       "primer1_ForNest                                                                      #605\n",
-       "primer                                                                             prE381\n",
+       "primer1_ForNest                                                                     prE86\n",
+       "primer                                                                             prE361\n",
        "genome                                                                               hg38\n",
        "chr                                                                                  chr8\n",
-       "start                                                                            42350386\n",
-       "end                                                                              42350364\n",
+       "start                                                                            42349731\n",
+       "end                                                                              42349755\n",
        "strand                                                                                  +\n",
        "guide_1                                                                            Polb#3\n",
        "sequence_guide_1                                                     TAATTTTGTGTGGGTCACCC\n",
@@ -3349,10 +3375,10 @@
        "plamid_name                                                            pE049_WO_redundant\n",
        "plasmid_sequence                        ttacataacttacggtaaatggcccgcctggctgaccgcccaacga...\n",
        "genomic_background                                                                    NaN\n",
-       "Name: 3, dtype: object"
+       "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3396,6 +3422,9 @@
     "                    ['TGGTTTTATTTCACCCCATGATAGTAATTATATCACTTCTGATCTGTTAAGAATAGACCTTTTAAAAGTATTGGATAACTTAGAGATGAGACATCTTCAGTTACTCTGTTATTCACCTATTACTCCTTAGGTTACTTGTGAATAATTTTGTGTGGGTCA', 'this is for pipeline2 WT polb fwd (row 4 in sheet)'],\n",
     "                    ['ACAAAAGAGGCCAAGCTGGAGCAGGAAATAGATGCACACGGAGGAAATGGTAGTGGAGTTCAGAGGAGGGAGAGGTTCTTTCTGCCTGGG','this is for pipeline2 WTpo lb rev (row 5 in sheet)']]\n",
     "\n",
+    "  \n",
+    "master_number = 0\n",
+    "    \n",
     "    \n",
     "seq_primer_to_breaksite = seq_to_breaksite[master_number][0]\n",
     "print(seq_to_breaksite[master_number][1],'\\n')    \n",
@@ -3527,6 +3556,146 @@
     "shutil.copy(file_trimmed_genome_local_bed, bed_folder)\n",
     "\n",
     "print('made local bed file:', N7, '_', N5 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### take the bed files and then use R script to plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tn5_Pol50_bpa\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "###### This is jsut a working space for the input files\n",
+    "\n",
+    "\n",
+    "#this is a minimal directory of only ~300 files for quick debugging\n",
+    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5/10000Reads'\n",
+    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/P_Eric4_Tn5'\n",
+    "\n",
+    "def get_csv_data(dir_sample, line_of_data_from_csv):\n",
+    "    sample_info_filename = os.path.join(dir_sample, 'sample_info.csv')\n",
+    "    experiments = pd.read_csv(sample_info_filename)\n",
+    "    return experiments.loc[line_of_data_from_csv]\n",
+    "\n",
+    "\n",
+    "#the amplicon info is related to the line on the csv file. It is indexed from 0. For PolbF we use 0.\n",
+    "#it is on my extera space so need to make sure that is mounted. (first thing to check if it throws and error)\n",
+    "\n",
+    "\n",
+    "amplicon_info = get_csv_data(directory, 3)\n",
+    "print(amplicon_info['name'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>alignments_target_site_all</th>\n",
+       "      <th>alignments_target_vector_all</th>\n",
+       "      <th>alignments_translocations_all</th>\n",
+       "      <th>collapsed_alignments_target_site</th>\n",
+       "      <th>collapsed_alignments_target_vector</th>\n",
+       "      <th>collapsed_alignments_translocations</th>\n",
+       "      <th>total aligned reads</th>\n",
+       "      <th>total collpased reads</th>\n",
+       "      <th>%_target_site_reads</th>\n",
+       "      <th>%_target_vector_reads</th>\n",
+       "      <th>%_translocations</th>\n",
+       "      <th>%_target_site_reads_collapsed</th>\n",
+       "      <th>%_target_vector_reads_collapsed</th>\n",
+       "      <th>%_translocations_collapsed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50411</td>\n",
+       "      <td>35306</td>\n",
+       "      <td>42001</td>\n",
+       "      <td>1004</td>\n",
+       "      <td>1306</td>\n",
+       "      <td>849</td>\n",
+       "      <td>127718.0</td>\n",
+       "      <td>3159.0</td>\n",
+       "      <td>39.470552</td>\n",
+       "      <td>27.643715</td>\n",
+       "      <td>32.885733</td>\n",
+       "      <td>31.78221</td>\n",
+       "      <td>41.342197</td>\n",
+       "      <td>26.875594</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   alignments_target_site_all  alignments_target_vector_all  \\\n",
+       "0                       50411                         35306   \n",
+       "\n",
+       "   alignments_translocations_all  collapsed_alignments_target_site  \\\n",
+       "0                          42001                              1004   \n",
+       "\n",
+       "   collapsed_alignments_target_vector  collapsed_alignments_translocations  \\\n",
+       "0                                1306                                  849   \n",
+       "\n",
+       "   total aligned reads  total collpased reads  %_target_site_reads  \\\n",
+       "0             127718.0                 3159.0            39.470552   \n",
+       "\n",
+       "   %_target_vector_reads  %_translocations  %_target_site_reads_collapsed  \\\n",
+       "0              27.643715         32.885733                       31.78221   \n",
+       "\n",
+       "   %_target_vector_reads_collapsed  %_translocations_collapsed  \n",
+       "0                        41.342197                   26.875594  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quantify_pipeline2_alignments(directory, 'local', amplicon_info)"
    ]
   },
   {
